@@ -108,6 +108,7 @@ void diagram_group_selected(Diagram *dia);
 void diagram_ungroup_selected(Diagram *dia);
 void diagram_parent_selected(Diagram *dia);
 void diagram_unparent_selected(Diagram *dia);
+void diagram_unparent_children_selected(Diagram *dia);
 
 void diagram_set_filename(Diagram *dia, char *filename);
 gchar *diagram_get_name(Diagram *dia);
